Background order creation task

--- a/SendMessageFromBot.ipynb
+++ b/SendMessageFromBot.ipynb
@@ -48,17 +48,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "url = \"https://api.trello.com/1/cards\"\n",
+    "\n",
+    "headers = {\n",
+    "  \"Accept\": \"application/json\"\n",
+    "}\n",
+    "\n",
+    "query = {\n",
+    "    \"key\": \"7cdb883b54cfa75f2b016922ed481a7f\",\n",
+    "    \"token\": \"4debfd8b041f59fc21f7090dd27440859c278376b41b6659ff8119af55b71f3b\",\n",
+    "    \"idList\": \"637c98853662f80248211a4e\",\n",
+    "    \"name\": \"Test card\",\n",
+    "    \"desc\": \"Some text\",\n",
+    "    \"pos\": \"top\"\n",
+    "}\n",
+    "\n",
+    "response = requests.request(\n",
+    "   \"POST\",\n",
+    "   url,\n",
+    "   headers=headers,\n",
+    "   params=query\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'6384103b497f1e04238eb884'"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()['id']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "loadingSamples = [\n",
+    "    # \"🟩🟩⬜️⬜️⬜️⬜️⬜️⬜️⬜️⬜️\",\n",
+    "    # \"🟩🟩🟩⬜️⬜️⬜️⬜️⬜️⬜️⬜️\",\n",
+    "    # \"⬜️🟩🟩🟩⬜️⬜️⬜️⬜️⬜️⬜️\",\n",
+    "    # \"⬜️⬜️🟩🟩🟩⬜️⬜️⬜️⬜️⬜️\",\n",
+    "    # \"⬜️⬜️⬜️🟩🟩🟩⬜️⬜️⬜️⬜️\",\n",
+    "    # \"⬜️⬜️⬜️⬜️🟩🟩🟩⬜️⬜️⬜️\",\n",
+    "    # \"⬜️⬜️⬜️⬜️⬜️🟩🟩🟩⬜️⬜️\",\n",
+    "    # \"⬜️⬜️⬜️⬜️⬜️⬜️🟩🟩🟩⬜️\",\n",
+    "    # \"⬜️⬜️⬜️⬜️⬜️⬜️⬜️🟩🟩🟩\",\n",
+    "    # \"⬜️⬜️⬜️⬜️⬜️⬜️⬜️⬜️🟩🟩\",\n",
+    "    # \"🟩⬜️⬜️⬜️⬜️⬜️⬜️⬜️⬜️🟩\",\n",
+    "\n",
+    "    \"🕑\",\n",
+    "    \"🕒\",\n",
+    "    \"🕓\",\n",
+    "    \"🕔\",\n",
+    "    \"🕕\",\n",
+    "    \"🕖\",\n",
+    "    \"🕗\",\n",
+    "    \"🕘\",\n",
+    "    \"🕙\",\n",
+    "    \"🕚\",\n",
+    "    \"🕛\",\n",
+    "    \"🕐\",\n",
+    "]\n",
+    "loadingSampleStart = loadingSamples[len(loadingSamples) - 1]\n",
+    "\n",
+    "\n",
+    "# async def sendLoadingMessage(self, userTg: User):\n",
+    "#         message = await self.bot.send_message(\n",
+    "#             chat_id = userTg.id,\n",
+    "#             text=loadingSampleStart\n",
+    "#         )\n",
+    "#         while True:\n",
+    "#             for sample in loadingSamples:\n",
+    "#                 await message.edit_text(sample)\n",
+    "#                 await asyncio.sleep(0.5)"
+   ]
   }
  ],
  "metadata": {
